--- a/e-commerce-admin/package.json
+++ b/e-commerce-admin/package.json
@@ -14,6 +14,8 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "mongodb": "^6.0.0",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^7.5.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
