--- a/e-commerce-admin/.env
+++ b/e-commerce-admin/.env
@@ -1,3 +1,3 @@
 GOOGLE_ID="409358113604-fdtentddqrij51p3i0dlj42jj5peo6ak.apps.googleusercontent.com"
 GOOGLE_SECRET="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"
-MONGODB_URI="mongodb+srv://34siddharth007:<ecommerce123>@cluster0.29ybuf9.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URI="mongodb+srv://34siddharth007:ecommerce123@cluster0.va5t7k7.mongodb.net/?retryWrites=true&w=majority"
